# nlu_rule_based

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: EGPSR_nlu_node.launch  GPSR_nlu_node.launch  new_GPSR_nlu_node.launch
resources/EGPSR/: EGPSRGrammar.txt  Extra Verbs.txt  tasks.json
resources/GPSR/: Extra Verbs.txt  GPSRGrammar.txt  tasks.json
resources/common/: Gestures.xml  Locations.xml  Names.xml  Objects.xml  rc23_Locations.xml  rc23_Objects.xml  testbed_Objects.xml
resources/new_GPSR/: CommonRules.txt  tasks.json
scripts/: nlu_rule_based_node
src/nlu_rule_based_ros/: nlu_node.py  nlu_tester.py  rule_based_nlu.py  speech_command_division.py
