<?xml version="1.0"?>
<package format="2">
  <name>nlu_rule_based</name>
  <version>1.0.0</version>
  <description>A NLU based on command generator reverse engineering</description>

  <author email="afonso.certo@tecnico.ulisboa.pt">Afonso Certo</author>
  <maintainer email="afonso.certo@tecnico.ulisboa.pt">Afonso Certo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
